--- a/EduClass.Web/Views/Groups/Create.cshtml
+++ b/EduClass.Web/Views/Groups/Create.cshtml
@@ -38,14 +38,12 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Crear" class="btn btn-success" />
+                        <input type="submit" value="Crear" class="btn btn-primary pull-right" />
+                        <a href="@Url.Action("Index")" class="btn btn-default-active pull-right mr10">Volver</a>
                     </div>
                 </div>
             </div>
         }
-        </div>
-        <div>
-            @Html.ActionLink("Volver", "Index")
         </div>
 </div>
 
