--- a/EduClass.Web/Views/Groups/Index.cshtml
+++ b/EduClass.Web/Views/Groups/Index.cshtml
@@ -15,7 +15,7 @@
     @if (UserSession.GetCurrentUser() is Teacher)
     {
         <div class="row">
-            <div class="col-sm-8 col-md-9 col-lg-10 people-list">
+            <div class="col-md-12 people-list">
 
                 <div class="people-options clearfix">
                     <div class="btn-group pull-right people-pager">
