--- a/EduClass.Web/Views/Tests/Create.cshtml
+++ b/EduClass.Web/Views/Tests/Create.cshtml
@@ -84,7 +84,7 @@
 @section scripts
 {
     <script src="~/Scripts/moment.min.js"></script>
-    <script src="~/Scripts/bootstrap-datetimepicker.js"></script>
+    <script src="~/Scripts/bootstrap-datetimepicker.min.js"></script>
     <script src="~/Scripts/es.js"></script>
     <script type="text/javascript">
 
