--- a/EduClass.Web/Views/Groups/Edit.cshtml
+++ b/EduClass.Web/Views/Groups/Edit.cshtml
@@ -52,7 +52,8 @@
                 </div>
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Guardar" class="btn btn-success" />
+                                <input type="submit" value="Guardar" class="btn btn-primary pull-right" />
+                                <a href="@Url.Action("Index")" class="btn btn-default-active pull-right mr10">Volver</a>
                             </div>
                         </div>
                     }
