--- a/EduClass.Web/Views/Tests/Index.cshtml
+++ b/EduClass.Web/Views/Tests/Index.cshtml
@@ -52,19 +52,23 @@ else
                                 <a href="@Url.Action("Index", "Question", new { id = item.Id })" title="" data-placement="top" data-toggle="tooltip" class="tooltips" type="button" data-original-title="Ver lista de preguntas">
                                     <i class="fa fa-question" style="font-size: 18px"></i>
                                 </a> |
+                                <a href="@Url.Action("ViewStudentsTest", new { id = item.Id })" title="" data-placement="top" data-toggle="tooltip" class="tooltips" type="button" data-original-title="Ver alumnos que han hecho la prueba">
+                                    <i class="fa fa-smile-o" style="font-size: 18px"></i>
+                                </a> | 
                                 <a href="@Url.Action("Edit", new { id = item.Id })"><i class="fa fa-edit" style="font-size: 18px"></i></a> |
                                 @if (item.Enabled)
                                 {
                                     <a href="@Url.Action("Disable", new { id = item.Id })" title="" data-placement="top" data-toggle="tooltip" class="tooltips" type="button" data-original-title="Deshabilitar examen para los alumnos">
                                         <i class="fa fa-minus-circle" style="font-size: 18px; color: red;"></i>
-                                    </a>
+                                    </a>  
                                 }
                                 else
                                 {
                                     <a href="@Url.Action("Disable", new { id = item.Id })" title="" data-placement="top" data-toggle="tooltip" class="tooltips" type="button" data-original-title="Habilitar examen para los alumnos, se les enviará una notificación">
                                         <i class="fa fa-check-circle" style="font-size: 18px; color: green;"></i>
-                                    </a>
+                                    </a> 
                                 }
+
                             </td>
                         </tr>
                     }
