--- a/EduClass.Web/Views/Pages/Create.cshtml
+++ b/EduClass.Web/Views/Pages/Create.cshtml
@@ -9,7 +9,7 @@
         <ul class="panel-options">
             <li><a><i class="fa fa-refresh"></i></a></li>
         </ul>
-        <h4 class="panel-title text-success">Crea una página publica para todos los usuarios del Grupo</h4>
+        <h4 class="panel-title text-success">Crea una página públic</h4>
 
     </div>
     <div class="panel-body">
