--- a/EduClass.Web/Views/Shared/_Layout.cshtml
+++ b/EduClass.Web/Views/Shared/_Layout.cshtml
@@ -44,6 +44,21 @@
             height: 48px;
 
         }
+         #avatarTeacherContacts {
+            width: 24px;
+            height: 24px;
+        }
+         #avatarMailSeleccionado {
+            width: 48px;
+            height: 48px;
+        }
+
+        #avatarListaMails {
+            width: 36px;
+            height: 36px;
+        }
+
+         
     </style>
 </head>
 <body>
@@ -130,13 +145,7 @@
         </div><!-- mainpanel -->
     </section>
 
-    <div class="container body-content">
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Edu.Class</p>
-        </footer>
-    </div>
-
+   
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/template")
     @RenderSection("scripts", required: false)
