--- a/EduClass.Web/Views/Board/Index.cshtml
+++ b/EduClass.Web/Views/Board/Index.cshtml
@@ -71,6 +71,7 @@ else
 
             @{var meAvatar = String.Empty;}
 
+            
             @{meAvatar = currentUser.Avatar.UrlPhoto;}
 
             <div class="panel" style="height:200px">
@@ -217,11 +218,11 @@ else
                                     </a>
                                 </div>
                                 <div class="media-body">
-                                    <h4 class="media-heading">@reply.Person.FirstName @reply.Person.LastName<small>@reply.CreatedAt.ToShortDateString() @reply.CreatedAt.ToShortTimeString()</small></h4>
+                                    <h4 class="media-heading">@reply.Person.FirstName @reply.Person.LastName<small>@HelperView.FormatDateTime(reply.CreatedAt)</small></h4>
                                     @reply.Content
                                 </div>
                                 <div class="media-right">
-                                    @if (item.PersonId == EduClass.Web.Infrastructure.Sessions.UserSession.GetCurrentUser().Id)
+                                    @if (reply.PersonId == EduClass.Web.Infrastructure.Sessions.UserSession.GetCurrentUser().Id)
                                     {
                                     
                                         <a class="tooltips" href="@Url.Action("RemoveReply", "Board", new { id = reply.Id })" data-toggle="tooltip" title="" data-original-title="Remove">
@@ -272,5 +273,10 @@ else
         $('#clickAyuda').click(function () {
             anno2.show();
         });
+
+        var message = "@Html.Raw(sessionMessage.ToString())";
+        if (message != "") {
+            showMessageJS(message);
+        }
     });
 </script>
