--- a/EduClass.Web/Views/Pages/Index.cshtml
+++ b/EduClass.Web/Views/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewBag.Title = "Páginas Publicas";
 }
-
+<h2>Páginas Públicas</h2>
 <div class="row">
     <div class="col-sm-8 col-md-9 col-lg-10">
         @if (UserSession.GetCurrentUser() is Teacher)
